--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 		<groupId>com.microsoft</groupId>
 		<artifactId>sqljdbc4</artifactId>
 		<version>3.0</version>
-	</dependency>
+	    </dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -157,5 +157,25 @@
 <!--        </dependency>-->
 
 	</dependencies>
+
+
+	<build>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<executions>
+				<execution>
+					<id>make-a-jar</id>
+					<phase>package</phase>
+					<goals>
+						<goal>jar</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
+
+	</build>
 
 </project>
